build: turborepo 이용하여 monorepo 구조로 변경

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,6 @@
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
 # production
 /build
 
@@ -34,3 +30,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Build Outputs
+.next/
+out/
+build
+dist
+
+# Turbo
+.turbo
