--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ably": "^1.2.48",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
